structuring and styling a basic layout

--- a/firstsite.com/index.html
+++ b/firstsite.com/index.html
@@ -5,12 +5,20 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Welcome to Firstsite.com</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officiis
-      dolore fugiat. Odit recusandae in ut, magni numquam ipsam, repellendus
-      perspiciatis illo porro pariatur dolorum optio, consequatur quos sequi
-      soluta!
-    </p>
+    <header>
+      <h1>Welcome to Firstsite.com</h1>
+    </header>
+    <main>
+      <h1>Main Content</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo officiis
+        dolore fugiat. Odit recusandae in ut, magni numquam ipsam, repellendus
+        perspiciatis illo porro pariatur dolorum optio, consequatur quos sequi
+        soluta!
+      </p>
+    </main>
+    <footer>
+      <h2>Footer content</h2>
+    </footer>
   </body>
 </html>
