--- a/firstsite.com/index.html
+++ b/firstsite.com/index.html
@@ -12,5 +12,8 @@
       perspiciatis illo porro pariatur dolorum optio, consequatur quos sequi
       soluta!
     </p>
+    <p>
+      <h1>Paragraph 2</h1>
+    </p>
   </body>
 </html>
